--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="public/inbox.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tenert Home Assignment</title>
+    <title>Tenet Home Assignment</title>
   </head>
   <body>
     <div id="root"></div>
